[package]
name = "sechit"
version = "0.1.0"
authors = ["Josh McNamee <josh04@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
factorial = "0.2.0"
wasm-bindgen = "0.2.58"
futures = "0.3.1"
wasm-bindgen-futures = "0.4.8"
web-sys = { version = "0.3.35", features = ["HtmlAudioElement", "HtmlMediaElement", "Node", "console"] }